no commit message

--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -283,6 +283,91 @@ runtime.Breakpoint()              #Sets a hardware breakpoint
                                   #Must be done withing a debuffer that can handle those signals
 
 
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            UNICODE            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+
+unicode.Is(*RANGE_TABLE, RUNE)->BOOL
+unicode.In(RUNE, ...*RANGE_TABLE)->BOOL
+unicode.IsOneOf([]*RANGE_TABLE, RUNE)->BOOL
+
+unicode.IsControl(RUNE)->BOOL
+unicode.IsDigit(RUNE)->BOOL
+unicode.IsGraphic(RUNE)->BOOL
+unicode.IsLetter(RUNE)->BOOL
+unicode.IsLower(RUNE)->BOOL
+unicode.IsMark(RUNE)->BOOL
+unicode.IsNumber(RUNE)->BOOL
+unicode.IsPrint(RUNE)->BOOL
+unicode.IsPunct(RUNE)->BOOL
+unicode.IsSpace(RUNE)->BOOL
+unicode.IsSymbol(RUNE)->BOOL
+unicode.IsTitle(RUNE)->BOOL
+unicode.IsUpper(RUNE)->BOOL
+
+unicode.To(INT, RUNE)->RUNE2
+unicode.ToLower(RUNE)->RUNE2
+unicode.ToTitle(RUNE)->RUNE2
+unicode.ToUpper(RUNE)->RUNE2
+unicode.SimpleFold(RUNE)->RUNE2
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            STRINGS            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+strings.Compare(STR, STR2)->INT
+strings.Contains(STR, STR2)->BOOL
+strings.ContainsAny(STR, STR2)->BOOL
+strings.ContainsRune(STR, RUNE)->BOOL
+strings.Count(STR, STR2)->INT
+strings.EqualFold(STR, STR2)->BOOL
+strings.Fields(STR)->[]STR2
+strings.FieldsFunc(STR, FUNC(RUNE)->BOOL)->[]STR2
+strings.HasPrefix(STR, STR2)->BOOL
+strings.HasSuffix(STR, STR2)->BOOL
+strings.Index(STR, STR2)->INT
+strings.IndexAny(STR, STR2)->INT
+strings.IndexByte(STR, BYTE)->INT
+strings.IndexFunc(STR, FUNC(RUNE)->BOOL)->INT
+strings.IndexRune(STR, RUNE)->INT
+strings.Join([]STR, STR2)->STR3
+strings.LastIndex(STR, STR2)->INT
+strings.LastIndexAny(STR, STR2)->INT
+strings.LastIndexByte(STR, BYTE)->INT
+strings.LastIndexFunc(STR, FUNC(RUNE)->BOOL)->INT
+strings.Map(FUNC(RUNE)->RUNE2, STR)->STR2
+strings.Repeat(STR, INT)->STR2
+strings.Replace(STR, STR2, STR3, INT)->STR4
+strings.ReplaceAll(STR, STR2, STR3)->STR4
+strings.Split(STR, STR2)->[]STR3
+strings.SplitAfter(STR, STR2)->[]STR3
+strings.SplitAfterN(STR, STR2, INT)->[]STR3
+strings.SplitN(STR, STR2, INT)->[]STR3
+strings.Title(STR)->STR2
+strings.ToLower(STR)->STR2
+strings.ToTitle(STR)->STR2
+strings.ToUpper(STR)->STR2
+strings.ToLowerSpecial(unicode.SPECIALCASE, STR)->STR2
+strings.ToTitleSpecial(unicode.SPECIALCASE, STR)->STR2
+strings.ToUpperSpecial(unicode.SPECIALCASE, STR)->STR2
+strings.ToValidUTF8(STR, STR2)->STR3
+strings.Trim(STR, STR2)->STR3
+strings.TrimFunc(STR, FUNC(RUNE)->BOOL)->STR2
+strings.TrimLeft(STR, STR2)->STR3
+strings.TrimLeftFunc(STR, FUNC(RUNE)->BOOL)->STR2
+strings.TrimPrefix(STR, STR2)->STR3
+strings.TrimRight(STR, STR2)->STR3
+strings.TrimRightFunc(STR, FUNC(RUNE)->BOOL)->STR2
+strings.TrimSpace(STR)->STR2
+strings.TrimSuffix(STR, STR2)->STR3
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
