no commit message

--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -291,6 +291,18 @@ runtime.Breakpoint()              #Sets a hardware breakpoint
 
 
 
+unicode.Version                   #Unicode version. '12.0.0'
+
+unicode.MaxASCII                  #'\u007f'
+unicode.MaxLatin1                 #'\u00ff'
+unicode.MaxRune                   #'\U0010ffff'
+unicode.ReplacementChar           #'\ufffd'
+
+unicode.RangeTable                #STRUCT. List of Unicode codepoints
+RANGE_TABLE.R16                   #[]RANGE16
+RANGE_TABLE.R32                   #[]RANGE32
+RANGE_TABLE.LatinOffset           #INT. Number of entries in R16 <= MaxLatin1
+
 unicode.Is(*RANGE_TABLE, RUNE)->BOOL
 unicode.In(RUNE, ...*RANGE_TABLE)->BOOL
 unicode.IsOneOf([]*RANGE_TABLE, RUNE)->BOOL
