no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1224,11 +1224,10 @@ UDPSOCKET.set[Multicast]TTL(UINT)               #
                                              \=+===============================+=/
 
 
-createServer([OBJ, ][FUNC()])->TCPSERVER        #FUNC is 'connection' event handler
-                                                #OBJ:
+createServer([OBJ, ][FUNC(TCPSOCKET)])          #FUNC is 'connection' event handler
+ ->TCPSERVER                                    #OBJ:
                                                 #  - allowHalfOpen BOOL: see below
                                                 #  - pauseOnConnect BOOL (def: false): if true, calls TCPSOCKET.pause()
-                                                #on 'connection'
 
 TCPSERVER.listen                                #Makes the TCSERVER:
 (PORT_NUM|'PORT'[, 'ADDR'][, UINT][, FUNC()])   #  - listen to PORT_NUM|'PORT':
