--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1082,6 +1082,7 @@ FUNC `...`                                    -|#  - VAL... are each ${EXPR}
 
 STR[NUM]                                        #Read-only. undefined if out of range.
 STR.charAt(NUM)                                 #Same except "" if out of range
+STR.item(NUM)->'CHAR'                        *-|#Like STR[NUM] except -NUM is from end
 
 STR.length                                      #
 
@@ -1267,11 +1268,6 @@ new Intl.DisplayNames([LOCALEOPTS])        14*-|#Language string translation
                                            14*-|#     - 'language' (e.g. 'fr' or 'fr-CA' to 'French' or 'Canadian French')
                                            14*-|#     - 'script' (ISO-15924, e.g. 'Latn' or 'Arab' to 'Latin' or 'Arabic')
                                            14*-|#     - 'currency' (ISO-4217, e.g. 'USD' to 'US Dollar')
-                                           14*-|#     - 'dateTimeField': 'year|quarter|month|weekOfYear|weekday|day|dayPeriod|hour|minute|second|timeZoneName'
-                                           14*-|#     - 'quarter': '1'-'4' -> '3rd quarter'
-                                           14*-|#     - 'month': '1'-'13' -> 'April'
-                                           14*-|#     - 'weekday': '1'-'7' -> 'Monday'
-                                           14*-|#     - 'dayPeriod': 'am|pm' -> 'PM'
 DISPLAYNAMES.of(STR)->STR2                 14*-|#
 
 new Intl.NumberFormat([LOCALEOPTS])         -|||#Number locale formatting.
@@ -1502,6 +1498,7 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
 
 ARR[NUM]                                        #
 ARR?.[NUM]                             14.0.0*-|#Like ARR == null ? undefined : ARR[NUM]
+ARR.item(NUM)->VAL                           *-|#Like STR[NUM] except -NUM is from end
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
@@ -2047,6 +2044,10 @@ import {} from "MDL"
 import "MDL"                               12*-|#Do not import the variable, just execute the file
 
 import("MDL")->PROMISE(OBJ)                12*-|#As opposed to above, not static (dynamic), i.e. does not have to be top-level
+
+import ... "MDL" assert { VAR: "VAL", ... }  *-|#Adds information about import using VAR: VAL
+import("MDL", { assert: { VAR: "VAL", ... }})*-|#Most VAR is host-specific, but the following are standard:
+ ->PROMISE(VAL)                              *-|#  - type 'json': file format is JSON
 
 CIRCULAR DEPENDENCIES ==>                  12*-|#Accessing circular properties during file loading throws an error.
                                            12*-|#But accessing them later works.
