no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.9.0
+VERSION ==>                       #7.10.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -441,7 +441,9 @@ GULP-ESLINT.failOn|AfterError()  ##Stops task on first|last error in VINYL.eslin
                                              \=+===============================+=/
 
 
-no-inline-comments                #Avoid non-full-line comments
+no-inline-comments [OBJ]          #Avoid non-full-line comments
+                                  #OBJ:
+                                  #  - ignorePattern 'REGEXP'
 multiline-comment-style [STR]     #How multiline comments should look like, with STR:
                                   #  - 'starred-block' (def): /*
                                   #                            *
