no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.20.6)
+react/*                          ##Node module "eslint-plugin-react" (7.21.2)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -868,6 +868,7 @@ react/jsx-handler-names [OBJ]    ##Requires PROPs naming for:
                                  ##E.g. onChange={this.handleChange}
                                  ##OBJ:
                                  ##  - checkLocalVariables BOOL (def: false): check event handlers stored as local variables too
+                                 ##  - checkInlineFunctions BOOL (def: false): check event handlers stored as inline functions too
 react/jsx-sort-props             ##Requires sorting PROPs
                                  ##OBJ:
                                  ##  - noSortAlphabetically BOOL (def: false)
@@ -894,6 +895,7 @@ react/jsx-no-bind [OBJ]          ##Avoid, according to OBJ:
 react/jsx-no-literals [OBJ]      ##Requires <...>{'STR'}</...> instead of <...>STR</...>
                                  ##OBJ:
                                  ##  - noStrings BOOL (def: false): forbids any literal STR in JSX, even outside {}
+                                 ##  - noAttributeStrings BOOL (def: false): forbids any literal STR in attributes
                                  ##  - allowedStrings STR_ARR
                                  ##  - ignoreProps BOOL (def: false): ignore inside props
 react/jsx-curly-brace-presence   ##Whether {} should be required ("always"), never allowed unless necessary ("never") or
@@ -906,8 +908,9 @@ react/jsx-no-useless-fragments   ##Avoid <>...</> if either it:
                                  ##  - has only one child
                                  ##  - is the child of a RDOM
 
-react/jsx-filename-
- extension [OBJ]                 ##Requires files containing JSX to have OBJ.extensions '.EXT'_ARR (def: '.jsx')
+react/jsx-filename-extension     ##Requires files containing JSX to have OBJ.extensions '.EXT'_ARR (def: '.jsx')
+ [OBJ]                           ##OBJ:
+                                 ##  - allow 'always' (def) or 'as-needed': whether to forbid files not containing JSX to have OBJ.extensions
 
 react/prefer-read-only-props     ##Enforce read-only types with Flow for props
 
