no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.12.0 (current), 13.14.0 (current), 12.18.4 (active LTS), 10.22.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.13.0 (current), 13.14.0 (current), 12.18.4 (active LTS), 10.22.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -420,7 +420,9 @@ FORMAT ==>                                   12*#Decided by:
                                              12*#  - stdin|--eval|--print -> --input-type module|commonjs (def: 'commonjs')
 
 MIXING ==>                                   12*#ESM can import CommonJS:
-                                             12*#  - only default|namespace import (no named import)
+                                             12*#  - module.exports VAL|OBJ is imported as default import
+                                             14*#  - module.exports.VAR can also be imported as named import
+                                             14*#     - does not work if module.exports.VAR is dynamically set
                                              12*#  - can use dynamic require() with createRequire()
                                              12*#CommonJS cannot import ESM:
                                              12*#  - including if ESM is a package (node_modules)
@@ -632,10 +634,10 @@ PACKAGE.exports[.CONDITION].PATH             12*#'PATH2'. Like PACKAGE.exports[.
                                              12*#  - matched against 'MODULE' in imported path
                                              12*#  - can be single '.'
                                              12*#If PATH ends with:
-                                             12*#  - '/':
-                                             12*#     - is a prefix
-                                             12*#     - PATH2 must end with '/'
-                                             12*#     - if several matches, longer prefixes prevail
+                                             14*#  - '/*':
+                                             14*#     - is a prefix
+                                             14*#     - PATH2 must include * (not necessarily at end)
+                                             14*#     - if several matches, longer prefixes prevail
                                              12*#  - otherwise: exact match
                                              12*#If no matches, errors.
                                              12*#Always errors:
