no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.13.0 (current), 13.14.0 (current), 12.18.4 (active LTS), 10.22.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.13.1 (current), 13.14.0 (current), 12.19.0 (active LTS), 10.22.1 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -63,8 +63,8 @@ clear|setImmediate(...)                         #
 ID.[un]ref()->ID                                #Yield the macrotask (see JavaScript doc)
 ID.hasRef()->BOOL                            11*#
 ID.refresh()->ID                                #Reset the counter
-ID[Symbol.toPrimitive]()->ID_NUM         12.9.0*#
-ID_NUM                                   12.9.0*#Can be passed to clear*(...)
+ID[Symbol.toPrimitive]()->ID_NUM        12.19.0*#
+ID_NUM                                  12.19.0*#Can be passed to clear*(...)
 
 queueMicrotask(FUNC())                       11*#Add a new microtask (see JavaScript doc)
                                             <12*#Experimental (throw warning)
@@ -143,9 +143,9 @@ new AsyncResource('RESOURCE_TYPE'[, OPTS])      #Custom RESOURCE
                                                 #    is garbage collected
 ASYNCRESOURCE.runInAsyncScope
  (FUNC[, THIS][, ...ARGS])                      #This is automatically create a new TASK_ID and call 'before|after' events
-ASYNCRESOURCE.bind(FUNC)->FUNC2              14*#Like ASYNCRESOURCE.runInAsyncScope.bind(FUNC)
-AsyncResource.bind(FUNC[, 'RESOURCE_TYPE'])  14*#Like (new AsyncResource('RESOURCE_TYPE')).bind(FUNC)
- ->FUNC2                                     14*#Def 'RESOURCE_TYPE': 'bound-anonymous-fn'
+ASYNCRESOURCE.bind(FUNC)->FUNC2         12.19.0*#Like ASYNCRESOURCE.runInAsyncScope.bind(FUNC)
+AsyncResource.bind                      12.19.0*#Like (new AsyncResource('RESOURCE_TYPE')).bind(FUNC)
+ (FUNC[, 'RESOURCE_TYPE'])->FUNC2       12.19.0*#Def 'RESOURCE_TYPE': 'bound-anonymous-fn'
 ASYNCRESOURCE.emitDestroy()                     #
 ASYNCRESOURCE.asyncId()->TASK_ID                #
 ASYNCRESOURCE.triggerId()->PARENT_TASK_ID       #
@@ -473,6 +473,8 @@ import 'data:MIME,...'                       12*#For MIMEs text/javascript, appl
                                              12*#Cannot do a nested import inside ...
                                              12*#Only with ESM
 
+import 'node:ID'                        14.13.1*#Same as import 'ID' (core module), but valid URI
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -537,7 +539,7 @@ MODULE.filename                                 #Reference to __filename
 MODULE.id                                       #For core modules, a string like "buffer". For others, module.filename.
 __dirname                                       #Current file absolute dirname
 
-CLI ==>                                         #Not defined: require.main, process.mainModule, __filename, __dirname, MODULE.parent
+CLI ==>                                         #Not defined: require.main, process.mainModule, __filename, __dirname
                                                 #MODULE.loaded: false
                                                 #MODULE.id: '<repl>'
                                                 #MODULE.exports: empty OBJ
@@ -627,7 +629,7 @@ PACKAGE.exports.CONDITION                    12*#'URI'[_ARR]. Like PACKAGE.expor
                                              12*#  - custom ones, e.g. 'electron', 'deno', etc.
                                              12*#CONDITION can be nested.
                                              12*#Matched|tried in object properties order.
---conditions=CONDITION,...               14.9.0*#Specify custom CONDITION
+--conditions=CONDITION,...              12.19.0*#Specify custom CONDITION
 
 PACKAGE.exports[.CONDITION].PATH             12*#'PATH2'. Like PACKAGE.exports[.CONDITION] except final 'URI' maps input path.
                                              12*#PATH must start with '.':
@@ -646,8 +648,8 @@ PACKAGE.exports[.CONDITION].PATH             12*#'PATH2'. Like PACKAGE.exports[.
                                              12*#     - including PACKAGE.exports {}
                                              12*#     - including PACKAGE.exports false
 
-PACKAGE.imports[.CONDITION].#PATH            14*#PATH2. Remaps import "PATH[...]" to "PATH2[...]"
-                                             14*#Same PATH syntax as PACKAGE.exports[.CONDITION].PATH
+PACKAGE.imports[.CONDITION].#PATH       12.19.0*#PATH2. Remaps import "PATH[...]" to "PATH2[...]"
+                                        12.19.0*#Same PATH syntax as PACKAGE.exports[.CONDITION].PATH
 
 
                                              /=+===============================+=\
@@ -794,7 +796,7 @@ BUFFER.readBig[U]Int64LE|BE
  (UINT)->BIGINT                         10.20.0*#
 BUFFER.readBig[U]Int64LE|BE
  (BIGINT, UINT)                         10.20.0*#
-BUFFER.*int*(...)                        14.9.0*#Like BUFFER.*Int*(...)
+BUFFER.*int*(...)                       12.19.0*#Like BUFFER.*Int*(...)
 
 BUFFER.swap16|32|64()->BUFFER                   #Swaps every couple of 1|2|4 bytes. Return value is reference
 
@@ -1205,7 +1207,7 @@ PORT_NUM, 'ADDR'[, FUNC(ERROR, UINT3)])         #If bind() has not been called, 
                                                 #When done, fires FUNC: UINT3 is the number of bytes sent.
                                                 #Max. SUBUFFER size is the MTU, which must be found with PMTUD.
                                                 #'ADDR' is optional
-                                             14*#SUBUFFER can also be STDUBUFFER
+                                        12.19.0*#SUBUFFER can also be STDUBUFFER
 
 UDPSOCKET.setRecv|SendBufferSize(NUM)           #
 UDPSOCKET.getRecv|SendBufferSize()->NUM         #
@@ -1606,8 +1608,8 @@ REQ                                             #ISTREAM, reading the body
 REQ.httpVersion[Major|Minor]                    #
 REQ.method                                      #"GET|DELETE|..." (not for CLIENTREQ's REQ)
 REQ.url                                         #STR (not for CLIENTREQ's REQ). Does not include origin
-REQ.host                                     14*#STR
-REQ.protocol                                 14*#STR
+REQ.host                                12.19.0*#STR
+REQ.protocol                            12.19.0*#STR
 REQ.headers                                     #As { VAR: 'VAL'[_ARR] ... }. Normalized:
                                                 #  - 'VAR' lowercase
                                                 #  - duplicates:
@@ -1726,7 +1728,7 @@ new AGENT(OBJ)                                  #OBJ is:
                                              14*#     - FILO lowers risk of re-using sockets closed by server due to inactivity
 AGENT.max[Free]Sockets                          #
 AGENT.[free]sockets                             #Current TCPSOCKET_ARR
-AGENT.maxTotalSockets                        14*#Like AGENT.maxSockets but for all origins
+AGENT.maxTotalSockets                   12.19.0*#Like AGENT.maxSockets but for all origins
 AGENT.requests                                  #Current REQ_ARR, not assigned to sockets yet.
 AGENT.destroy()                                 #To do to destroy free sockets if keepAliveMsecs high, to avoid hanging.
 AGENT.keepSocketAlive = FUNC(TCPSOCKET)         #Override function fired on new free socket.
@@ -2069,7 +2071,7 @@ WRENCH.chownSyncRecursive(DIR, UID, GID)       ##
 WRENCH.chmodSyncRecursive(DIR, UINT)           ##
 
 [f]utimes(PATH|FD_INT, ATIME, MTIME, FUNC(ERR)) #Change atime|mtime
-lutimes(...)                                 14*#
+lutimes(...)                            12.19.0*#
 access(PATH[, NUM], FUNC(ERROR))                #Checks if has permission, according to NUM or'd flags:
                                                 #  - FS.constants.F_OK (def, always implied):
                                                 #     - files exists and its directory list it
@@ -2113,7 +2115,7 @@ unlink(PATH, FUNC(ERROR))                       #
 rmdir(PATH, FUNC(ERROR)[, OPTS])                #OPTS:
                                              12*#  - recursive BOOL (def: false):
                                              12*#     - recursively on children
-                                             12*#     - no error if PATH does not exist
+                                             12*#     - no error if PATH does not exist. However, this is deprecated.
                                              12*#  - maxRetries NUM (def: 0)
                                              12*#     - retry NUM times with linear backoff (starting at OPTS.retryDelay NUMms (def: 100)) on
                                              12*#       EBUSY, ENOTEMPTY, EPERM, EMFILE or ENFILE
@@ -2340,7 +2342,7 @@ createGzip|Deflate[Raw]([OBJ])->COMPRESS        #COMPRESS is a IOSTREAM, so shou
                                                 #     - constants.Z_HUFFMAN_ONLY: less random, and large repeating chunk
                                                 #     - constants.Z_RLE: same, but specially for PNG data
                                                 #     - constants.Z_FIXED: only specific application
-                                             14*#  - maxOutputLength NUM (def: Buffer.kMaxLength): not used in streaming mode
+                                        12.19.0*#  - maxOutputLength NUM (def: Buffer.kMaxLength): not used in streaming mode
                                                 #Memory required (in bytes) is:
                                                 #  - for compression:
                                                 #     - 2^(windowBits+2) + 2^(memLevel+9) + chunkSize, i.e. 272K by def
@@ -2381,7 +2383,7 @@ createBrotliCompress([OBJ])->COMPRESS           #Same with Brotli. OBJ:
                                                 #        - def 0
                                                 #        - hint for number of direct distance codes and postfix bits.
                                                 #        - those are two internal parameters of the algorithms, to use only when knowing it.
-                                             14*#  - maxOutputLength: like createGzip|Deflate()
+                                        12.19.0*#  - maxOutputLength: like createGzip|Deflate()
 createGunzip|Inflate[Raw]|Unzip([OBJ])->UNCOMPRS#UNCOMPRESS is a IOSTREAM.
                                                 #Unzip: autodetect whether Gunzip or Deflate (but not DeflateRaw).
 createBrotliDecompress([OBJ])->UNCOMPRESS       #Same with Brotli. OBJ:
@@ -2866,8 +2868,8 @@ new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                              12*#        - maxOldGenerationSizeMb NUM: main heap max size
                                              12*#        - maxYoungGenerationSizeMb NUM: recently created objects heap max size
                                              12*#        - codeRangeSizeMb NUM: code max size
-                                             12*#        - stackSizeMb NUM (def: 4): stack max size
-                                             14*#  - trackUnmanagedFds BOOL (def: false): on exit, automatically call any FD_INT if FS.close() was not called
+                                        12.19.0*#        - stackSizeMb NUM (def: 4): stack max size
+                                        12.19.0*#  - trackUnmanagedFds BOOL (def: false): on exit, automatically call any FD_INT if FS.close() was not called
 
 global.*                                        #In worker, like in parent except process.*:
                                                 #  - exit() affects current thread not current process
@@ -2907,19 +2909,19 @@ WORKER|MESSAGEPORT.postMessage                  #Like DOM except:
  (VAL[, VAL2_ARR])                              #  - child can only use MESSAGEPORT, not global "postMessage()"
                                                 #  - VAL2:
                                                 #     - can be SHARED_ARRBUFFER
-                                             14*#     - can be FILE_HANDLE or crypto KEY
+                                        12.19.0*#     - can be FILE_HANDLE or crypto KEY
                                                 #     - when MESSAGEPORT, VAL must be MESSAGEPORT
 WORKER|MESSAGEPORT.on('message', FUNC(VAL))     #Like DOM except:
                                                 #  - receive VAL directly, not MESSAGEEVENT
                                                 #  - MESSAGEPORT will keep process open until MESSAGEPORT.close|unref()
 WORKER|MESSAGEPORT.on
- ('messageerror', FUNC(ERROR))               14*#Like DOM
+ ('messageerror', FUNC(ERROR))          12.19.0*#Like DOM
 WORKER.receiveMessageOnPort(MESSAGPORT)->VAL 12*#If there is a message VAL in the queue, return it and remove it from queue.
                                              12*#Otherwise return undefined
 WORKER.moveMessagePortToContext              11*#Transfer MESSAGEPORT to another global object COBJ (created by VM.createContext())
  (MESSAGEPORT, COBJ)->MESSAGEPORT2           11*#MESSAGEPORT will become unusable
                                              11*#'message' event listeners are kept
-WORKER.markAsUntransferable(VAL2)            14*#If VAL2 is passed to postMessage(), ignore it from the VAL2_ARR
+WORKER.markAsUntransferable(VAL2)       12.19.0*#If VAL2 is passed to postMessage(), ignore it from the VAL2_ARR
 
 new MessageChannel()
 MESSAGECHANNEL.port1|2
@@ -3256,8 +3258,8 @@ randomBytes(NUM[, FUNC(ERROR, BUFFER)])         #Generates random BUFFER of leng
 randomFill[Sync](TDBUFFER[, NUM[, NUM2]]        #Like randomBytes() but by filling in a TDBUFFER instead, from offset NUM
 [, FUNC(ERROR, TDBUFFER)])[->BUFFER]            #(def: 0) with length NUM2 (def: TDBUFFER.lBUFFER.length).
 randomInt
- ([UINT, ]UINT2[, FUNC(ERROR, UINT3)])  14.10.0*#Generates random UINT3 from UINT (included, def: 0) to UINT2 (excluded)
-randomInt([UINT, ]UINT2)->UINT3         14.10.0*#Is cryptographically secure (e.g. from /dev/random)
+ ([UINT, ]UINT2[, FUNC(ERROR, UINT3)])  12.19.0*#Generates random UINT3 from UINT (included, def: 0) to UINT2 (excluded)
+randomInt([UINT, ]UINT2)->UINT3         12.19.0*#Is cryptographically secure (e.g. from /dev/random)
 
 getFips()->BOOL                                 #True if Node has been:
                                                 #   - built to be FIPS-compliant (by def, is not)
@@ -3317,12 +3319,12 @@ ASSERT.rejects|doesNotReject                    #PROMISE rejection
                                                 #Fails if not using a PROMISE[()]
                                                 #PROMISE2 is resolved if test passed
 
-new CallTracker()                            14*#Asserts number of times a FUNC was called.
-CALLTRACKER.calls([FUNC][, NUM])->FUNC2      14*#FUNC2 is wrapper around FUNC
-                                             14*#Def FUNC: noop
-                                             14*#Def NUM: 1
-CALLTRACKER.report()->ASSERTIONERROR_ARR     14*#Empty array if none
-CALLTRACKER.verify()                         14*#Throw all ASSERTIONERROR_ARR aggregated as one
+new CallTracker()                       12.19.0*#Asserts number of times a FUNC was called.
+CALLTRACKER.calls([FUNC][, NUM])->FUNC2 12.19.0*#FUNC2 is wrapper around FUNC
+                                        12.19.0*#Def FUNC: noop
+                                        12.19.0*#Def NUM: 1
+CALLTRACKER.report()->ASSERTIONEROR_ARR 12.19.0*#Empty array if none
+CALLTRACKER.verify()                    12.19.0*#Throw all ASSERTIONERROR_ARR aggregated as one
 
 
                                              /=+===============================+=\
@@ -3393,16 +3395,16 @@ PERFNODETIMING.environment                      #Environment initialized
 PERFNODETIMING.bootstrapComplete                #End of all require()
 PERFNODETIMING.loopStart                        #Start of event loop
 PERFNODETIMING.loopExit                         #End of event loop. Not sure when it is not 0
-PERFNODETIMING.idleTime                 14.10.0*#How long event loop was idle
+PERFNODETIMING.idleTime                 12.19.0*#How long event loop was idle
 
-PERFORMANCE.eventLoopUtilization        14.10.0*#Measure event loops:
- ([OBJ2][, OBJ3])->OBJ                  14.10.0*#  - from OBJ2 (def: process start)
-                                        14.10.0*#  - until OBJ3 (def: now)
-                                        14.10.0*#  - where OBJ2|OBJ3 are previous eventLoopUtilization() return values
-                                        14.10.0*#OBJ:
-                                        14.10.0*#  - active DOMDURATION: event loop active
-                                        14.10.0*#  - idle DOMDURATION: inverse
-                                        14.10.0*#  - utilization: active / (active + idle)
+PERFORMANCE.eventLoopUtilization        12.19.0*#Measure event loops:
+ ([OBJ2][, OBJ3])->OBJ                  12.19.0*#  - from OBJ2 (def: process start)
+                                        12.19.0*#  - until OBJ3 (def: now)
+                                        12.19.0*#  - where OBJ2|OBJ3 are previous eventLoopUtilization() return values
+                                        12.19.0*#OBJ:
+                                        12.19.0*#  - active DOMDURATION: event loop active
+                                        12.19.0*#  - idle DOMDURATION: inverse
+                                        12.19.0*#  - utilization: active / (active + idle)
 
 PERFGCTIMING                                    #PERFENTRY for garbage collector, with:
                                                 #  - entryType 'gc'
