no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -818,7 +818,7 @@ semi-style [STR]                  #Whether to put ; at start or end of line
                                   #STR: 'last' (def), 'first'
 no-unexpected-multiline           #Avoid multilines statements that would be interpreted as two statements if semicolons were
                                   #inserted.
-no-extra-semi                     #Avoid useess semicolons, e.g. {};
+no-extra-semi                     #Avoid useless semicolons, e.g. {};
 
 
                                              /=+===============================+=\
