no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1642,6 +1642,12 @@ wrap-regex                        #Must write (/REGEXP/) not /REGEXP/
 no-floating-decimal               #Avoid .NUM or NUM. (use 0.NUM or NUM)
 unicorn/no-zero-fractions        ##Avoid NUM.0 or NUM.*0
 
+unicorn/numeric-separators-style ##Use numeric thousands separators
+ [OBJ]                           ##OBJ:
+                                 ##  - TYPE (among binary|octal|number|hexadecimal for base 2|8|10|16):
+                                 ##     - groupLength NUM (def: 3 for base 10, 4 for base 2|8, 2 for base 16)
+                                 ##     - minimumDigits NUM (def: 5 for base 10, 0 for others)
+
 no-octal                          #Avoid 0... (prefer 0o...)
 no-octal-escape                   #Avoid \NNN octal escape
 prefer-numeric-literals           #Avoid parseInt(STR, 2|8|16) when 0b... 0o... or 0x... can be used instead
@@ -1662,6 +1668,7 @@ no-bitwise [OBJ]                  #Avoids ^ ~ << >> >>> <<< & | (possible typo f
                                   #OBJ:
                                   #  - allow 'OP'_ARR: exceptions
                                   #  - int32Hint BOOL: allow |0 (used sometimes for typecasting)
+unicorn/prefer-math-trunc        ##Prefer Math.trunc() over bitwise equivalents
 
 
                                              /=+===============================+=\
