no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1162,8 +1162,10 @@ no-implicit-coercion [OBJ]        #Must use Boolean|Number|String() for typecast
                                   #  - allow STR_ARR (def: []): among '~', '!!', '+', '*'
 unicorn/explicit-length-check    ##Avoid implicit transtyping of ARR|STR.length
  [OBJ]                           ##OBJ:
-                                 ##  - non-zero (def: not checked): whether length !== 0 should be
-                                 ##    'not-equal' (!== 0) greater-than (> 0), greater-than-or-equal (>= 1)
+                                 ##  - non-zero: whether length !== 0 should be
+                                 ##     - 'not-equal': !== 0
+                                 ##     - 'greater-than' (def): > 0
+                                 ##     - 'greater-than-or-equal': >= 1
 
 no-new-wrappers                   #Avoid new String|Number|Boolean()
 unicorn/new-for-builtins         ##Avoid new String|Number|Boolean|Symbol|Bigint(). Force new with all other builtins,
@@ -1213,6 +1215,7 @@ no-unneeded-ternary [OBJ]         #Avoid TEST ? true : false (prefer Boolean(TES
                                   #VAR ? VAR : VAL (prefer VAR || VAL)
 multiline-ternary [STR]           #Newlines in ?:
                                   #STR: 'always' (def) or 'never' or 'always-multiline' (always if some VAL contains newline)
+unicorn/prefer-ternary           ##Use ?: providing each expression is only one line and simple
 
 
                                              /=+===============================+=\
