no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1645,8 +1645,10 @@ RES.getHeaderNames()->'VAR'_ARR                 #
 RES.getHeaders()->OBJ                           #
 RES.hasHeader('VAR')->BOOL                      #
 RES.removeHeader('VAR')                         #
-RES.writeHead(STATUS_NUM[, 'STATUS_NAME'][,OBJ])#Sets RES.statusCode|Message|headers (must be done only once)
-                                             11*#Returns RES
+RES.writeHead                                   #Sets RES.statusCode|Message|headers (must be done only once)
+ (STATUS_NUM[, 'STATUS_NAME'][, HEADERS])    11*#Returns RES
+                                                #HEADERS is an OBJ
+                                        14.14.0*#or an ARR
 RES.addTrailers(OBJ)                            #Add trailing header fields, i.e. between write() and end() of the body.
                                                 #Do not forget Trailer [C] at beginning of response
 RES.writeProcessing()                           #Send 102 response
